add feature selector

--- a/Notebooks/features/FeatureSelection.ipynb
+++ b/Notebooks/features/FeatureSelection.ipynb
@@ -16,7 +16,7 @@
     "from data_pipeline.pipelinesteps import data_splitter\n",
     "from model.modelorchastrator import ModelOrchestrator\n",
     "from data_pipeline.dataset import Dataset\n",
-    "from evaluate.metric_eval import ModelEvaluator"
+    "from evaluate.metric_eval import ModelEvaluator\n"
    ]
   },
   {
@@ -54,8 +54,7 @@
    "source": [
     "model_orchestrator = ModelOrchestrator(cfg)\n",
     "\n",
-    "model = model_orchestrator.create_pipe_line()\n",
-    "ME = ModelEvaluator(model[-1], ['roc_auc_ovr', 'f1'])"
+    "model = model_orchestrator.create_pipe_line()"
    ]
   },
   {
@@ -64,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model[-1].feature_importances_ "
+    "model"
    ]
   },
   {
@@ -73,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg.model.model_steps[1]"
+    "from sklearn.feature_selection import SequentialFeatureSelector"
    ]
   },
   {
@@ -82,26 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from omegaconf import DictConfig, OmegaConf\n",
-    "t = cfg.model.model_steps[1]\n",
-    "next(iter(t.items()))[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['education_927M_last']  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sfs = SequentialFeatureSelector(model[-1], tol= -0.0001, direction = \"backward\", n_jobs = -1)\n",
     "model.fit(dataset.X_train, dataset.y_train)"
    ]
   },
@@ -111,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.transform_without_predictor(dataset.X_train)"
+    "sfs.fit(model.transform_without_predictor(dataset.X_train), dataset.y_train)"
    ]
   },
   {
@@ -120,78 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ME.evaluate(model.transform_without_predictor(dataset.X_train), dataset.y_train)"
+    "model[-1].feature_importances_"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import get_scorer_names\n",
-    "all_scorers = get_scorer_names()\n",
-    "all_scorers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import roc_auc_score\n",
-    "\n",
-    "def gini(y_true, y_pred):\n",
-    "    return 2 * roc_auc_score(y_true, y_pred) - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gini(dataset.y_train, model.predict_proba(dataset.X_train).T[1])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "std_dev = np.std(model.predict_proba(dataset.X_train).T[1])\n",
-    "print(std_dev)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "roc_auc_score(dataset.y_train, model.predict_proba(dataset.X_train).T[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "roc_auc_score(dataset.y_oot, model.predict_proba(dataset.X_oot).T[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
