refactor model orchestrator

--- a/Notebooks/features/FeatureSelection.ipynb
+++ b/Notebooks/features/FeatureSelection.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "model_orchestrator = ModelOrchestrator(cfg)\n",
     "\n",
-    "model = model_orchestrator.create_pipe_line()"
+    "model = model_orchestrator.create_pipeline()"
    ]
   },
   {
@@ -63,7 +63,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model"
+    "from sklearn.datasets import load_breast_cancer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X, y = load_breast_cancer(return_X_y=True, as_frame=True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "clf.fit(X_train, y_train)\n",
+    "print(f\"Baseline accuracy on test data: {clf.score(X_test, y_test):.2}\")"
    ]
   },
   {
@@ -72,16 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_selection import SequentialFeatureSelector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sfs = SequentialFeatureSelector(model[-1], tol= -0.0001, direction = \"backward\", n_jobs = -1)\n",
     "model.fit(dataset.X_train, dataset.y_train)"
    ]
   },
@@ -91,7 +90,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sfs.fit(model.transform_without_predictor(dataset.X_train), dataset.y_train)"
+    "from scipy.cluster import hierarchy\n",
+    "from scipy.spatial.distance import squareform\n",
+    "from scipy.stats import spearmanr\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "X = model.transform_without_predictor(dataset.X_train).fillna(0)\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 8))\n",
+    "corr = spearmanr(X).correlation\n",
+    "\n",
+    "# Ensure the correlation matrix is symmetric\n",
+    "corr = (corr + corr.T) / 2\n",
+    "corr\n",
+    "np.fill_diagonal(corr, 1)\n",
+    "\n",
+    "# We convert the correlation matrix to a distance matrix before performing\n",
+    "# hierarchical clustering using Ward's linkage.\n",
+    "distance_matrix = 1 - np.abs(corr)\n",
+    "dist_linkage = hierarchy.ward(squareform(distance_matrix))\n",
+    "dendro = hierarchy.dendrogram(\n",
+    "    dist_linkage, labels=X.columns.to_list(), ax=ax1, leaf_rotation=90\n",
+    ")\n",
+    "dendro_idx = np.arange(0, len(dendro[\"ivl\"]))\n",
+    "\n",
+    "ax2.imshow(corr[dendro[\"leaves\"], :][:, dendro[\"leaves\"]])\n",
+    "ax2.set_xticks(dendro_idx)\n",
+    "ax2.set_yticks(dendro_idx)\n",
+    "ax2.set_xticklabels(dendro[\"ivl\"], rotation=\"vertical\")\n",
+    "ax2.set_yticklabels(dendro[\"ivl\"])\n",
+    "_ = fig.tight_layout()"
    ]
   },
   {
@@ -99,9 +127,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model[-1].feature_importances_"
-   ]
+   "source": []
   }
  ],
  "metadata": {
