refactor tuning and add agae feature

--- a/Notebooks/features/test.ipynb
+++ b/Notebooks/features/test.ipynb
@@ -49,11 +49,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cfg.data_pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.X_train['Age']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model_orchestrator = ModelOrchestrator(cfg)\n",
     "\n",
     "model = model_orchestrator.create_pipe_line()\n",
     "model.fit(dataset.X_train, dataset.y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
