move the model forge

--- a/Notebooks/features/FeatureSelection.ipynb
+++ b/Notebooks/features/FeatureSelection.ipynb
@@ -14,9 +14,9 @@
     "from hydra.core.global_hydra import GlobalHydra\n",
     "\n",
     "from data_pipeline.pipelinesteps import data_splitter\n",
-    "from model.modelorchastrator import ModelOrchestrator\n",
-    "from data_pipeline.dataset import Dataset\n",
-    "from evaluate.metric_eval import ModelEvaluator\n"
+    "from src_out.model.modelorchastrator import ModelOrchestrator\n",
+    "from src_out.data.dataset import Dataset\n",
+    "from src_out.model.metricevaluator import ModelEvaluator\n"
    ]
   },
   {
