changes to tune and train for new dataset

--- a/Notebooks/ModelEval/CV.ipynb
+++ b/Notebooks/ModelEval/CV.ipynb
@@ -13,10 +13,11 @@
     "from hydra import compose, initialize\n",
     "from hydra.core.global_hydra import GlobalHydra\n",
     "\n",
-    "from data_pipeline.pipelinesteps import data_splitter\n",
-    "from model.modelorchastrator import ModelOrchestrator\n",
-    "from data_pipeline.dataset import Dataset\n",
-    "from evaluate.metric_eval import ModelEvaluator"
+    "from model_forge.model.model_orchastrator import ModelOrchestrator\n",
+    "from model_forge.data.dataset import Dataset\n",
+    "from model_forge.model.model_evaluator import ModelEvaluator\n",
+    "\n",
+    "from data_pipeline.pipelinesteps import data_splitter"
    ]
   },
   {
@@ -36,14 +37,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create Dataset\n",
     "df = pd.read_feather(\"../../data/parquet_files/train/processed_train.feather\")\n",
-    "df.pop('date_decision')\n",
     "data_pipeline = instantiate(cfg.data_pipeline)\n",
     "df = data_pipeline.apply(df)  \n",
     "\n",
-    "dataset = Dataset(data=df, data_splitter=data_splitter, target_column='target')"
+    "dataset = Dataset(data=df, data_splitter=data_splitter, target_column='target', splits_columns=['train', 'test', 'OOT'])"
    ]
   },
   {
