change itter of dataset

--- a/Notebooks/ModelEval/CV.ipynb
+++ b/Notebooks/ModelEval/CV.ipynb
@@ -37,13 +37,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Create Dataset\n",
     "df = pd.read_feather(\"../../data/parquet_files/train/processed_train.feather\")\n",
@@ -59,9 +52,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for name,(y, x) in dataset.items():\n",
+    "    print(x)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model_orchestrator = ModelOrchestrator(cfg)\n",
     "\n",
-    "model = model_orchestrator.create_pipe_line()\n",
+    "model = model_orchestrator.create_pipeline()\n",
     "ME = ModelEvaluator(model[-1], ['roc_auc_ovr', 'f1'])"
    ]
   },
