update trian script

--- a/Notebooks/ModelEval/CV.ipynb
+++ b/Notebooks/ModelEval/CV.ipynb
@@ -52,10 +52,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name,(y, x) in dataset.items():\n",
-    "    print(x)\n",
+    "model_orchestrator = ModelOrchestrator(cfg)\n",
     "\n",
-    "    "
+    "model = model_orchestrator.create_pipeline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(dataset['OOT'][0], dataset['OOT'][1]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model_forge.data.predictions import Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Predictions.create_from_model_dataset(model, dataset)"
    ]
   },
   {
@@ -67,7 +93,7 @@
     "model_orchestrator = ModelOrchestrator(cfg)\n",
     "\n",
     "model = model_orchestrator.create_pipeline()\n",
-    "ME = ModelEvaluator(model[-1], ['roc_auc_ovr', 'f1'])"
+    "ME = ModelEvaluator(model, ['roc_auc_ovr', 'f1'])"
    ]
   },
   {
